--- a/stylesheet.css
+++ b/stylesheet.css
@@ -382,4 +382,15 @@ h2 {
   margin-block-start: 0;
   margin-block-end: 0;
 }
+
+
+.welogo {
+  top: 30px;
+  right: 30px;
+  position: absolute;
+  max-width: 100%;
+  max-height: 100px;
+  display: block;
+  z-index: 20;
 }
+
