--- a/stylesheet.css
+++ b/stylesheet.css
@@ -389,7 +389,7 @@ h2 {
   z-index: 20;
 }
 
-@media only screen (min-width:320px) and (max-width:500px){
+@media only screen and (min-width:320px) and (max-width:500px){
   .welogo {
     margin: 0% auto;
     top: 50px;
