--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@
     border: none;
     cursor:pointer;
     outline:none;
-    font-family: montserrat;
+    font-family: Montserrat;
     color: #4EA2EB;
     letter-spacing: 1.3px;
     font-weight: 400;
@@ -38,7 +38,7 @@
     border: none;
     cursor:pointer;
     outline:none;
-    font-family: montserrat;
+    font-family: Montserrat;
     color: #4EA2EB;
     font-weight: 700;
     font-size: 18px;
@@ -99,7 +99,7 @@
     border: none;
     cursor:pointer;
     outline:none;
-    font-family: montserrat;
+    font-family: Montserrat;
     color: #4EA2EB;
     letter-spacing: 1.3px;
     font-weight: 400;
@@ -115,7 +115,7 @@
     cursor:pointer;
     overflow: hidden;
     outline:none;
-    font-family: montserrat;
+    font-family: Montserrat;
     color: #4EA2EB;
     font-weight: 700;
     font-size: 18px;
@@ -232,7 +232,7 @@ input, .dpi_form[type=number]::placeholder{
 }
 
 label, .from_form {
-  font-family: montserrat;
+  font-family: Montserrat;
   font-size: 25px;
   font-weight: 600;
   color: #FFFFFF;
@@ -248,7 +248,7 @@ label, .from_form {
 }
 
 label, .to_form {
-  font-family: montserrat;
+  font-family: Montserrat;
   font-size: 25px;
   font-weight: 600;
   color: #FFFFFF;
@@ -260,7 +260,7 @@ label, .to_form {
 }
 
 label, .dpi_form {
-  font-family: montserrat;
+  font-family: Montserrat;
   font-size: 25px;
   font-weight: 600;
   color: #fff;
@@ -282,7 +282,7 @@ label, .dpi_form {
 }
 
 .dpi_section p {
-   font-family: montserrat;
+   font-family: Montserrat;
    font-size: 10px;
    font-weight: 200;
    position: absolute;
@@ -310,7 +310,7 @@ label, .dpi_form {
 }
 
 h1 {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 10px;
   letter-spacing: 1.3px;
   Font-weight: 600;
@@ -321,7 +321,7 @@ h1 {
 }
 
 h2 {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 30px;
   letter-spacing: 1.3px;
   Font-weight: 600;
@@ -333,7 +333,7 @@ h2 {
 .formula_output p {
   padding: 13px;
   position: relative;
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 13px;
   Font-weight: 350;
   color: #fff;
@@ -342,7 +342,7 @@ h2 {
 }
 
 .designedby {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 5px;
   Font-weight: 350;
   color: #FFF;
@@ -355,7 +355,7 @@ h2 {
 }
 
 .ver {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 8px;
   Font-weight: 350;
   color: #FFF;
@@ -368,7 +368,7 @@ h2 {
 }
 
 .dgc {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 10px;
   Font-weight: 600;
   color: #FFF;
@@ -400,7 +400,7 @@ h2 {
   }
 
   .dgc {
-    Font-family: montserrat;
+    Font-family: Montserrat;
     Font-size: 2em;
     Font-weight: 600;
     color: #FFF;
@@ -412,7 +412,7 @@ h2 {
 }
 
 .designedby {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 1em;
   Font-weight: 350;
   color: #FFF;
@@ -425,7 +425,7 @@ h2 {
 }
 
 .ver {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 20px;
   Font-weight: 350;
   color: #FFF;
@@ -450,7 +450,6 @@ h2 {
 
 .formula {
   position: absolute;
-  position: fixed;
   top: 50em;
   left: 5em;
   color: #4DB1FF;
@@ -462,7 +461,7 @@ h2 {
   padding-bottom: .8em;
   padding-left: .8em;
   position: relative;
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 2em;
   Font-weight: 350;
   color: #fff;
@@ -471,11 +470,11 @@ h2 {
 }
 
 h1 {
-  Font-family: montserrat;
+  Font-family: Montserrat;
   Font-size: 1em;
   letter-spacing: 1.3px;
   Font-weight: 600;
-  position: fixed;
+  position: absolute;
   left: 5em;
   top: 47em;
   Color: #fff;
