--- a/stylesheet.css
+++ b/stylesheet.css
@@ -305,7 +305,7 @@ label, .dpi_form {
 .formula {
   position: absolute;
   left: 686px;
-  top: 220px;
+  top: 195px;
   color: #4DB1FF;
 }
 
@@ -314,9 +314,6 @@ h1 {
   Font-size: 10px;
   letter-spacing: 1.3px;
   Font-weight: 600;
-  position: absolute;
-  left: 686px;
-  top: 193px;
   Color: #fff;
 }
 
@@ -921,9 +918,8 @@ h2 {
 }
 
 .formula {
-  position: absolute;
-  width: 314px;
-  height: 116px;
+  width: 15em;
+  height: 25em;
   left: 30px;
   top: 434.5px;
   overflow: visible;
@@ -946,8 +942,8 @@ h2 {
 .formula_output {
   position: absolute;
   overflow: visible;
-  width: 314px;
-  height: 93px;
+  width: 314pt;
+  height: 93pt;
   left: 0px;
   top: 23px;
 }
@@ -979,3 +975,4 @@ h1 {
 
 
 
+}
