--- a/stylesheet.css
+++ b/stylesheet.css
@@ -865,8 +865,8 @@ h2 {
   .welogo {
     top: 30px;
     right: 30px;
-    height: 1em;
-    width: 2em;
+    height: 28px;
+    width: 44px;
   }
 
   .dgc {
