--- a/stylesheet.css
+++ b/stylesheet.css
@@ -309,7 +309,7 @@ label, .dpi_form {
   color: #4DB1FF;
 }
 
-.formula h1 {
+h1 {
   position: absolute;
   Font-family: Montserrat;
   Font-size: 10px;
