--- a/stylesheet.css
+++ b/stylesheet.css
@@ -307,8 +307,10 @@ h1 {
   Font-size: 10px;
   letter-spacing: 1.3px;
   Font-weight: 600;
-  position: absolute;
   Color: #fff;
+  position: absolute;
+  top: 201px;
+  left: 686px;
 }
 
 .formula {
