--- a/stylesheet.css
+++ b/stylesheet.css
@@ -893,12 +893,40 @@ h2 {
 
 /* FORMULA SECTION */
 
+
+
+
+
+/* DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION */
+
+.dpi_section p {
+  font-family: Montserrat;
+  font-size: 10px;
+  font-weight: 200;
+  position: absolute;
+  top: 75px;
+  color: #fff;
 }
 
+.dpi_section {
+  position: absolute;
+  left: 30px;
+  bottom: 169px;
+}
+
+input, .dpi_form[type=number]{
+  width: 161px;
+  height: 72px;
+  size: 25px;
+  border: 1px solid #CCE7FF;
+  border-style: dashed;
+  border-radius: 5px;
+  transition: border 0.3s linear;
+  padding-left: 21px;
+}
+
+/* DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION */
 
 
-
-
-
-
+}
 }
