--- a/stylesheet.css
+++ b/stylesheet.css
@@ -394,453 +394,6 @@ h2 {
  
 /* TAGS */ 
   .welogo {
-    margin: 0% auto;
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    height: 2em;
-    width: 3.5em;
-  }
-
-  .dgc {
-    Font-family: Montserrat;
-    Font-size: 22.5pt;
-    Font-weight: 600;
-    color: #FFF;
-    position: fixed;
-    left: 57px;
-    bottom: 60px;
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
-
-.designedby {
-  Font-family: Montserrat;
-  Font-size: 1em;
-  Font-weight: 350;
-  color: #FFF;
-  position: fixed;
-  left: 60px;
-  bottom: 100px;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  letter-spacing: 2px;
-}
-
-.ver {
-  Font-family: Montserrat;
-  Font-size: 20px;
-  Font-weight: 350;
-  color: #FFF;
-  position: fixed;
-  right: 60px;
-  bottom: 60px;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  letter-spacing: 2px;
-}
-/* TAGS */
-
-/* FORMULA SECTION */
-
-.formula_output {
-  position: absolute;
-  overflow: visible;
-  width: 314px;
-  height: 93px;
-  left: 0px;
-  top: 23px;
-}
-
-:root{
-  --web-view-ids: iPhone_X_XS_11_Pro___1;
-}
-
-.formula {
-  position: absolute;
-  width: 314px;
-  height: 116px;
-  left: 30px;
-  top: 434.5px;
-  overflow: visible;
-}
-
-.formula_output p {
-  position: absolute;
-  overflow: visible;
-  width: 314px;
-  height: 93px;
-  left: 0px;
-  top: 23px;
-}
-
-
-.from_buttonbox label span.first{
-    background-color: transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    outline:none;
-    font-family: Montserrat;
-    color: #4EA2EB;
-    letter-spacing: 1.3px;
-    font-weight: 400;
-    font-size: 14px;
-    opacity: 0.8;
-    transition: 0.3s;
-}
-
-.from_buttonbox label span.last{
-    background-color: transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    outline:none;
-    font-family: Montserrat;
-    color: #4EA2EB;
-    font-weight: 700;
-    font-size: 18px;
-    opacity: 0.8;
-    transition: 0.3s;
-    position: absolute;
-    right: 21px;
-    margin: 19.5px 0px 0px 20px;
-}
-
-.from_buttonbox label input:hover ~ span.first{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.from_buttonbox label input:hover ~ span.last{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.from_buttonbox label input:checked ~ span.first{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.from_buttonbox label input:checked ~ span.last{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.from_buttonbox label input{
-    display: none;
-}
-
-.from_buttonbox label span{
-    display: inline-block;
-    margin: 21px 0px 0px 20px;
-}
-
-.from_buttonbox {
-  width: 248px;
-  height: 306px;
-  border-color: #fff;
-  border: 1px solid #CCE7FF; 
-  border-radius: 5px;
-  position: absolute;
-  Left: 120px;
-  top: 293px;
-}
-
-.to_buttonbox label span.first{
-    background-color: transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    outline:none;
-    font-family: Montserrat;
-    color: #4EA2EB;
-    letter-spacing: 1.3px;
-    font-weight: 400;
-    font-size: 14px;
-    opacity: 0.8;
-    transition: 0.3s;
-}
-
-.to_buttonbox label span.last{
-    background-color: transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-    outline:none;
-    font-family: Montserrat;
-    color: #4EA2EB;
-    font-weight: 700;
-    font-size: 18px;
-    opacity: 0.8;
-    transition: 0.3s;
-    position: absolute;
-    right: 21px;
-    margin: 19.5px 0px 0px 20px;
-}
-
-.to_buttonbox label input:hover ~ span.first{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.to_buttonbox label input:hover ~ span.last{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.to_buttonbox label input:checked ~ span.first{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.to_buttonbox label input:checked ~ span.last{
-    color: white;
-    opacity: 1; 
-    font-weight: 700;
-}
-
-.to_buttonbox label input{
-    display: none;
-}
-
-.to_buttonbox label span{
-    display: inline-block;
-    margin: 21px 0px 0px 20px;
-}
-
-.to_buttonbox {
-  width: 248px;
-  height: 306px;
-  border-color: #fff;
-  border: 1px solid #CCE7FF;
-  border-radius: 5px;
-  position: absolute;
-  left: 418px;
-  top: 293px;
-}
-
-.formula_output {
-  height: 248px;
-  width: 161px;
-  border-radius: 5px;
-  background-color: #4DB1FF;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input, .to_form[type=number]{
-  width: 225px;
-  height: 72px;
-  size: 25px;
-  border: 1px dashed #4DB1FF;
-  border-style: dashed;
-  border-radius: 5px;
-  background-color: #4DB1FF;
-  transition: 0.3s;
-  padding-left: 21px;
-}
-
-input, .to_form[type=number]::placeholder{
-  color: #79C4FF;
-}
-
-
-input, .from_form[type=number]{
-  width: 225px;
-  height: 72px;
-  size: 25px;
-  border: 1px dashed #CCE7FF;
-  background-color: transparent;
-  border-radius: 5px;
-  transition: 0.3s;
-  padding-left: 21px;
-}
-
-input, .from_form[type=number]::placeholder{
-  color: #4EA2EB;
-}
-
-
-input, .dpi_form[type=number]{
-  width: 136px;
-  height: 72px;
-  size: 25px;
-  border: 1px solid #CCE7FF;
-  border-style: dashed;
-  border-radius: 5px;
-  transition: border 0.3s linear;
-  padding-left: 21px;
-}
-
-input, .dpi_form[type=number]::placeholder{
-  color: #4EA2EB;
-}
-
-label, .from_form {
-  font-family: Montserrat;
-  font-size: 25px;
-  font-weight: 600;
-  color: #FFFFFF;
-  font-kerning: normal 50;
-}
-
-.from_form:hover{
-  border-color: #fff;
-}
-
-.from_form:focus{
-  outline: none;
-}
-
-label, .to_form {
-  font-family: Montserrat;
-  font-size: 25px;
-  font-weight: 600;
-  color: #FFFFFF;
-  font-kerning: normal 50;
-}
-
-.to_form:hover {
-  border-color: #4DB1FF;
-}
-
-label, .dpi_form {
-  font-family: Montserrat;
-  font-size: 25px;
-  font-weight: 600;
-  color: #fff;
-  font-kerning: normal 50;
-}
-
-.dpi_form:hover {
-  border-color: #FFF;
-}
-
-.dpi_form:focus{
-  outline: none;
-}
-
-.dpi_section {
-  position: absolute;
-  left: 686px;
-  top: 491px;
-}
-
-.dpi_section p {
-   font-family: Montserrat;
-   font-size: 10px;
-   font-weight: 200;
-   position: absolute;
-   top: 75px;
-   color: #fff;
-}
-
-.from_section {
-  position: absolute;
-  left: 120px;
-  top: 201px;
-}
-
-.to_section {
-  position: absolute;
-  left: 418px;
-  top: 201px;
-}
-
-.formula {
-  position: absolute;
-  left: 686px;
-  top: 200px;
-  color: #4DB1FF;
-}
-
-h2 {
-  Font-family: Montserrat;
-  Font-size: 30px;
-  letter-spacing: 1.3px;
-  Font-weight: 600;
-  position: absolute;
-  left: 385px;
-  top: 195px;
-  Color: #fff}
-
-.formula_output p {
-  padding: 13px;
-  position: relative;
-  Font-family: Montserrat;
-  Font-size: 13px;
-  Font-weight: 350;
-  color: #fff;
-  margin-block-start: 5px;
-  margin-block-end: 5px;
-}
-
-.designedby {
-  Font-family: Montserrat;
-  Font-size: 5px;
-  Font-weight: 350;
-  color: #FFF;
-  position: fixed;
-  left: 30px;
-  bottom: 43px;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  letter-spacing: .8px;
-}
-
-.ver {
-  Font-family: Montserrat;
-  Font-size: 8px;
-  Font-weight: 350;
-  color: #FFF;
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  letter-spacing: .8px;
-}
-
-.dgc {
-  Font-family: Montserrat;
-  Font-size: 10px;
-  Font-weight: 600;
-  color: #FFF;
-  position: fixed;
-  left: 30px;
-  bottom: 30px;
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-
-
-.welogo {
-  top: 30px;
-  right: 30px;
-  position: fixed;
-  max-width: 100%;
-  max-height: 100px;
-  z-index: 20;
-}
-
-@media only screen and (min-width:320px) and (max-width:500px){
- 
- 
-/* TAGS */ 
-  .welogo {
     top: 30px;
     right: 30px;
     height: 28px;
@@ -926,6 +479,20 @@ input, .dpi_form[type=number]{
 }
 
 /* DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION */
+
+
+/* FORMULA SECTION FORMULA SECTIOM FORMULA SECTION FORMULA SECTION FORMULA SECTION */
+
+.formula {
+  position: absolute;
+  left: 686px;
+  top: 200px;
+  color: #4DB1FF;
+}
+
+
+
+/* FORMULA SECTION FORMULA SECTIOM FORMULA SECTION FORMULA SECTION FORMULA SECTION */
 
 
 }
