--- a/stylesheet.css
+++ b/stylesheet.css
@@ -525,4 +525,32 @@ h1 {
 /* FORMULA SECTION FORMULA SECTIOM FORMULA SECTION FORMULA SECTION FORMULA SECTION */
 
 
+
+
+
+/* TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION */
+
+.to_section {
+  position: absolute;
+  left: 30px;
+  top: 340px;
+}
+
+input, .to_form[type=number]{
+  width: 206px;
+  height: 72px;
+  size: 25px;
+  border: 1px dashed #4DB1FF;
+  border-style: dashed;
+  border-radius: 5px;
+  background-color: #4DB1FF;
+  transition: 0.3s;
+  padding-left: 21px;
+}
+
+
+
+/* TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION */
+
+
 }
