--- a/stylesheet.css
+++ b/stylesheet.css
@@ -531,7 +531,7 @@ h1 {
 /* TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION */
 
 .to_section {
-  position: absolute;
+  position: fixed;
   left: 30px;
   top: 300px;
 }
