--- a/stylesheet.css
+++ b/stylesheet.css
@@ -476,6 +476,7 @@ input, .dpi_form[type=number]{
   border-radius: 5px;
   transition: border 0.3s linear;
   padding-left: 21px;
+  background: transparent;
 }
 
 /* DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION DPI SECTION */
@@ -505,7 +506,7 @@ h1 {
   height: 93px;
   width: 349px;
   border-radius: 5px;
-  background-color: transparent;
+  background-color: #4DB1FF;
 }
 
 .formula_output p {
