--- a/stylesheet.css
+++ b/stylesheet.css
@@ -442,6 +442,7 @@ h2 {
 
 :root{
   --web-view-ids: iPhone_X_XS_11_Pro___1;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 /* FORMULA SECTION */
@@ -557,8 +558,41 @@ label, .to_form {
   font-kerning: normal 50;
 }
 
-
 /* TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION TO SECTION */
+
+
+
+
+
+
+/* FROM SECTION FROM SECTION FROM SECTION FROM SECTION FROM SECTION */
+
+.from_section {
+  position: fixed;
+  left: 30px;
+  top: 230px;
+}
+
+input, .from_form[type=number] {
+  width: 225px;
+  height: 72px;
+  size: 25px;
+  border: 1px dashed #CCE7FF;
+  background-color: transparent;
+  border-radius: 5px;
+  transition: 0.3s;
+  padding-left: 21px;
+}
+
+label, .from_form {
+  font-family: Montserrat;
+  font-size: 25px;
+  font-weight: 600;
+  color: #FFFFFF;
+  font-kerning: normal 50;
+}
+
+/* FROM SECTION FROM SECTION FROM SECTION FROM SECTION FROM SECTION */
 
 
 }
