--- a/stylesheet.css
+++ b/stylesheet.css
@@ -559,7 +559,7 @@ label, .to_form {
 }
 
 .to_buttonbox {
-  width: 314px;
+  width: 100%;
   height: 47px;
   border-color: #fff;
   border: 1px solid #CCE7FF;
