--- a/stylesheet.css
+++ b/stylesheet.css
@@ -562,7 +562,7 @@ label, .to_form {
   font-family: Montserrat;
   font-size: 25px;
   font-weight: 600;
-  color: #FFFFFF;
+  font-color: #FFFFFF;
   font-kerning: normal 50;
 }
 
