--- a/stylesheet.css
+++ b/stylesheet.css
@@ -541,7 +541,8 @@ h1 {
   left: 30px;
   top: 295px;
   background-color: #4DB1FF;
-  color: white
+  color: white;
+  border-radius: 5px;
 }
 
 input, .to_form[type=number] {
