--- a/stylesheet.css
+++ b/stylesheet.css
@@ -564,7 +564,7 @@ label, .to_form {
   font-family: Montserrat;
   font-size: 25px;
   font-weight: 600;
-  color: #ffffff;
+  color: #ffffff!important;
   font-kerning: normal 50;
 }
 
